Finish Creating Race Abilities, Update Ability Cooldown Code, Add Ability Messages